crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_191_Waixing191_Downtown_Nekketsu_Monogatari_J_T_Chi_madcell.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-191-Waixing191/Downtown - Nekketsu Monogatari (J) [T+Chi_madcell].nes
rom_sha256=308cea9b63401262933f8120423b70bab12da84f5178e36d1cfbf43538ed532c
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=4787cd7e95924f53
checkpoint f900 fb_fnv1a64=c0442af19f03260a
checkpoint f1100 fb_fnv1a64=c0442af19f03260a
